tests/ui/feature-gates/feature-gate-native_link_modifiers_as_needed.rs
#[link(name = "foo", kind = "dylib", modifiers = "+as-needed")]
//~^ ERROR: linking modifier `as-needed` is unstable
extern "C" {}

fn main() {}
